design : 모든 화면 기본 UI 구성 완료
- 배너 콘텐츠 UI 구성
- 상품 콘텐츠 UI 구성
- 추천 코디 콘텐츠 UI 구성
- 헤더, 푸터 UI 구성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">MusinsaTest</string>
     <string name="appbar_title">MUSINSA</string>
+    <string name="description_banner_image">배너 이미지</string>
+    <string name="description_style_image">추천 코디 상품 이미지</string>
+    <string name="description_goods_image">상품 이미지</string>
 </resources>
