feat : 통신을 통해 받은 데이터를 View 에 바인딩 작업 진행
- 라이브 데이터를 활용하여 데이터가 들어오면 View에 바인딩되도록 구현
- RecyclerView와 ViewPager2 를 중첩시켜 자연스런 스크롤 구현
- BindingAdapter를 활용하여 요구 사항에 맞게 각각 타입에 따른 데이터를 RecyclerView 에 바인딩
- Glide 를 활용하여 이미지 로드

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="description_banner_image">배너 이미지</string>
     <string name="description_style_image">추천 코디 상품 이미지</string>
     <string name="description_goods_image">상품 이미지</string>
+    <string name="description_header_image">헤더 타이틀 이미지</string>
+    <string name="header_total_link">전체</string>
+    <string name="goods_price">%s원</string>
+    <string name="goods_sale_rate">%d</string>
+    <string name="goods_coupon">쿠폰</string>
 </resources>
