feat : 클릭 이벤트 추가
- 클릭하면 주어진 url 로 이동하는 이벤트 리스너 생성 및 각 아이템에 할당
- ViewPager 에 pageChanged 이벤트 리스너를 할당하여 현재 page 인덱스 보여주기 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="description_header_image">헤더 타이틀 이미지</string>
     <string name="header_total_link">전체</string>
     <string name="goods_price">%s원</string>
-    <string name="goods_sale_rate">%d</string>
     <string name="goods_coupon">쿠폰</string>
+    <string name="goods_sale_rate">%d%%</string>
+    <string name="banner_page_index">%d / %d</string>
 </resources>
